Add basic structure for Create Room submission form -- styling refinement pending

--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -115,6 +115,11 @@ img.small {
     -webkit-animation: up 2s forwards, across 35s 5000ms linear infinite;
 }
 
+.list-inset li {
+  list-style-type: none;
+  margin-bottom: 20px;
+}
+
 @font-face {
   font-family: Langdon;
   src: url(../img/Langdon.otf);
