--- a/client/www/templates/playlist.html
+++ b/client/www/templates/playlist.html
@@ -1,6 +1,6 @@
 <!-- SUBHEADER -->
 <!-- Search Bar -->
-<div class="bar bar-subheader item-input-inset">
+<div ng-show="!isSpotify()" class="bar bar-subheader item-input-inset">
   <label class="item-input-wrapper">
     <i class="icon ion-ios-search placeholder-icon"></i>
     <input type="search" placeholder="SoundCloud search..." ng-model="query" ng-change='searchSong()'>
@@ -66,6 +66,103 @@
             <div><img src="../img/plus.gif" class="plus-button"/></div>
             <div class="vote-count">0</div>
             <div><img src="../img/minus.gif" class="minus-button"/></div>
+          </div>
+        </div>
+      </div>
+    </ul>
+  </div>
+</ion-content>
+
+<!-- FOOTER  -->
+<div class="bar bar-footer row row-center bar-stable">
+  <!-- Player Control Buttons: Only for host -->
+  <div class="col-20" style="margin-left: auto; margin-right: auto; float:left; min-width:160px" ng-show="isHost()">
+    <button play-music class="ion-play button button-outline button-royal circle bottomButton"></button>
+    <button pause-music class="ion-pause button button-outline button-royal bottomButton"></button>
+    <button prev-track class="ion-skip-backward button button-outline button-royal bottomButton"></button>
+    <button next-track class="ion-skip-forward button button-outline button-royal bottomButton"></button>
+  </div>
+
+  <!-- Now Playing: Seen by host and guest -->
+  <div ng-class="isHost() ? 'nowplayingHost center' : 'nowplaying center'">
+    <span ng-show='currentPlaying.title' class='marquee center small'>
+      <p>
+        <img height="28" width="28" style="float: left; margin-right:5px" class="rounded" src={{currentPlaying.image}}> 
+        <span class='center small'>{{ currentPlaying.title }} by {{ currentPlaying.artist }}  {{ currentPostion }} / {{ currentDuration }}
+        </span>
+      </p>
+    </span>
+  </div>
+</div>
+
+<!-- ***** show this template if it's a spotify list ***** -->
+
+<!-- SUBHEADER -->
+<!-- Search Bar -->
+<div ng-show="isSpotify()" class="bar bar-subheader item-input-inset">
+  <label class="item-input-wrapper">
+    <i class="icon ion-ios-search placeholder-icon"></i>
+    <input type="search" placeholder="Spotify search..." ng-model="query" ng-change='searchSong(true)'>
+  </label>
+  <button class="button button-clear" ng-click='clearResults()'>
+    Cancel
+  </button>
+</div>
+
+<!-- Search Results -->
+<div class='list list-inset searchResults spotifyResults'>
+  <div music-player="" add-song="song" ng-click='clearSpotify()' class="row searchResultsItem" ng-repeat='song in spotifyResponse | orderBy: "-popularity" '>
+    <span class="center thumb">  <img class='rounded right small'  src='/img/spotifyLogo.png'></span>
+    <span class="center textcenter large">  {{ song.title }} by {{ song.artist }}</span>
+  </div>
+</div>
+<!-- Sound Manager Init -->
+<sound-manager></sound-manager>
+
+<!-- CONTENT -->
+<!-- include the fb share button here -->
+<!-- Playlist View: If you are the host -->
+<ion-content class="has-header has-footer has-subheader" ng-show="isHost()">  
+  <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
+    <div class="row card" ng-show="playlist.length === 0">
+    <center>
+      <h3>There are no songs currently in your playlist.</h3>
+      <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
+    </center>
+    </div>
+    <ul>
+      <div class='row' ng-repeat="song in playlist">
+        <div class="col-90">
+          <div play-from-playlist="song" ng-class="currentPlaying.id === song.id ? 'button button-royal button-block playlistItem' : 'button button-outline button-stable button-block playlistItem'">
+          {{ spotifyResponse.title }} by {{spotifyResponse.artist}}
+          </div>
+        </div>
+        <div ng-show="isHost()">
+          <a remove-from-playlist="song" data-index="{{$index}}" ng-class="currentPlaying.id === song.id ? 'button button-clear button-royal button-block' : 'button button-clear button-stable button-block'">
+            <i class="ion-close-round"></i>
+          </a>
+        </div>
+      </div>
+    </ul>
+    </div>
+</ion-content>
+
+
+<!-- Playlist View: If you are a guest -->
+<ion-content class="has-header has-footer has-subheader" ng-show="!isHost()">  
+  <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
+    <div ng-bind-html="fbShare" ng-click='fbShareSend()'></div>
+    <div class="row card" ng-show="playlist.length === 0">    
+    <center>
+      <h3>There are no songs currently in your playlist.</h3>
+      <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
+    </center>
+    </div>
+    <ul>
+      <div class='row' ng-repeat="song in playlist">
+        <div class="col-90">
+          <div ng-class="currentPlaying.id === song.id ? 'button button-positive button-block playlistItem' : 'button button-outline button-stable button-block playlistItem'">
+          {{ song.title }} by {{song.artist}}
           </div>
         </div>
       </div>
