--- a/client/www/templates/playlist.html
+++ b/client/www/templates/playlist.html
@@ -63,9 +63,9 @@
         <div class="col-90">
           <div ng-class="currentPlaying.id === song.id ? 'button button-positive button-block playlistItem' : 'button button-outline button-stable button-block playlistItem'">
             {{ song.title }} by {{song.artist}}
-            <div><img src="../img/plus.gif" class="plus-button"/></div>
+            <img src="../img/plus.gif" class="plus-button"/>
             <div class="vote-count">0</div>
-            <div><img src="../img/minus.gif" class="minus-button"/></div>
+            <img src="../img/minus.gif" class="minus-button"/>
           </div>
         </div>
       </div>
