--- a/client/www/templates/playlist.html
+++ b/client/www/templates/playlist.html
@@ -67,9 +67,9 @@
             <div class="vote-count">0</div>
             <img src="../img/minus.gif" class="minus-button"/>
           </div>
-          <a href="" ng-click="upVote(song)"><img src="../img/plus.gif" class="plus-button" /></a>
-          <div class="vote-count">{{song.vote}}</div>
-          <a href="" ng-click="downVote(song)"><img src="../img/minus.gif" class="minus-button"/></a>
+          <a href="" ng-click="upVote($index)"><img src="../img/plus.gif" class="plus-button" /></a>
+          <div class="vote-count">{{votes[$index]}}</div>
+          <a href="" ng-click="downVote($index)"><img src="../img/minus.gif" class="minus-button"/></a>
         </div>
       </div>
     </ul>
