Start implementation of upvotes and downvotes data persistence, committing before rebasing

--- a/client/www/templates/landingPage.html
+++ b/client/www/templates/landingPage.html
@@ -29,7 +29,7 @@
 		<div class="list list-inset">
 			<form ng-submit="createRoom()">
 		  	<label class="item item-input create-center">
-		    	<ol class='create-center'>
+		    	<ol id='create-room-input' class='create-center'>
 			    	<li>Event Name: <input type="string" ng-model="roomData.eventName"></li>
 			    	<li>
 			    		<label>Choose Platform: Spotify <input value=true id="platform-input" type="radio" ng-model="roomData.spotify" name="playerApp" ></label> 
