--- a/client/www/templates/playlist.html
+++ b/client/www/templates/playlist.html
@@ -28,7 +28,7 @@
 <ion-content class="has-header has-footer has-subheader" ng-show="isHost()">  
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div class="row card" ng-show="playlist.length === 0">
-    <center>
+    <center class="center-it-auto">
       <h3>There are no songs currently in your playlist.</h3>
       <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
     </center>
@@ -54,7 +54,7 @@
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div ng-bind-html="fbShare" ng-click='fbShareSend()' class="fbShareButton"></div>    
     <div class="row card" ng-show="playlist.length === 0">    
-    <center>
+    <center class="center-it-auto">
       <h3>There are no songs currently in your playlist.</h3>
       <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
     </center>
@@ -127,7 +127,7 @@
 <ion-content class="has-header has-footer has-subheader" ng-show="isHost()">  
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div class="row card" ng-show="playlist.length === 0">
-    <center>
+    <center class="center-it-auto">
       <h3>There are no songs currently in your playlist.</h3>
       <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
     </center>
@@ -136,7 +136,7 @@
       <div class='row' ng-repeat="song in playlist">
         <div class="col-90">
           <div play-from-playlist="song" ng-class="currentPlaying.id === song.id ? 'button button-royal button-block playlistItem' : 'button button-outline button-stable button-block playlistItem spotifyPlaylistItem'">
-          {{ spotifyResponse.title }} by {{spotifyResponse.artist}}
+          {{ song.title }} by {{song.artist}}
           </div>
         </div>
         <div ng-show="isHost()">
@@ -157,7 +157,7 @@
     <span ng-bind-html="fbShare" ng-click='fbShareSend()' class="fbShareButton"></span>
     
     <div class="row card" ng-show="playlist.length === 0">    
-    <center>
+    <center class="center-it-auto">
       <h3>There are no songs currently in your playlist.</h3>
       <h4>Use the search bar at the top to search for songs and add to the playlist.</h4>
     </center>
