Improve datetime input UI

--- a/client/www/templates/landingPage.html
+++ b/client/www/templates/landingPage.html
@@ -36,8 +36,8 @@
 			    		<label>SoundCloud <input value=false id="platform-input" type="radio" ng-model="roomData.spotify" name="playerApp" > 
 			    		</label>
 			    	</li>
-			    	<li>Start Time: <input type="datetime-local" ng-model="roomData.startTime"></li>
-			    	<li>End Time: <input type="datetime-local" ng-model="roomData.endTime"></li>
+			    	<li><label>Start Time: <input type="datetime-local" ng-model="roomData.startTime"></label></li>
+			    	<li><label>End Time: <input type="datetime-local" ng-model="roomData.endTime"></label></li>
 			    	<button type="submit">Done</button>
 		    	</ol>
 		  	</label>
