Implement host vs guest view

--- a/client/www/templates/playlist.html
+++ b/client/www/templates/playlist.html
@@ -25,7 +25,7 @@
 <!-- CONTENT -->
 <!-- include the fb share button here -->
 <!-- Playlist View: If you are the host -->
-<ion-content class="has-header has-footer has-subheader" ng-show="isHost()">  
+<ion-content class="has-header has-footer has-subheader" ng-show="hostStatus">  
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div class="row card" ng-show="playlist.length === 0">
     <center class="center-it-auto">
@@ -40,7 +40,7 @@
           {{ song.title }} by {{song.artist}}
           </div>
         </div>
-        <div ng-show="isHost()">
+        <div ng-show="hostStatus">
           <a remove-from-playlist="song" data-index="{{$index}}" ng-class="currentPlaying.id === song.id ? 'button button-clear button-royal button-block' : 'button button-clear button-stable button-block'">
             <i class="ion-close-round"></i>
           </a>
@@ -50,7 +50,7 @@
     </div>
 </ion-content>
 <!-- Playlist View: If you are a guest -->
-<ion-content class="has-header has-footer has-subheader" ng-show="!isHost()">  
+<ion-content class="has-header has-footer has-subheader" ng-show="!hostStatus">  
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div ng-bind-html="fbShare" ng-click='fbShareSend()' class="fbShareButton"></div>    
     <div class="row card" ng-show="playlist.length === 0">    
@@ -77,7 +77,7 @@
 <!-- FOOTER  -->
 <div class="bar bar-footer row row-center bar-stable">
   <!-- Player Control Buttons: Only for host -->
-  <div class="col-20" style="margin-left: auto; margin-right: auto; float:left; min-width:160px" ng-show="isHost()">
+  <div class="col-20" style="margin-left: auto; margin-right: auto; float:left; min-width:160px" ng-show="hostStatus">
     <button play-music class="ion-play button button-outline button-royal circle bottomButton"></button>
     <button pause-music class="ion-pause button button-outline button-royal bottomButton"></button>
     <button prev-track class="ion-skip-backward button button-outline button-royal bottomButton"></button>
@@ -85,7 +85,7 @@
   </div>
 
   <!-- Now Playing: Seen by host and guest -->
-  <div ng-class="isHost() ? 'nowplayingHost center' : 'nowplaying center'">
+  <div ng-class="hostStatus ? 'nowplayingHost center' : 'nowplaying center'">
     <span ng-show='currentPlaying.title' class='marquee center small'>
       <p>
         <img height="28" width="28" style="float: left; margin-right:5px" class="rounded" src={{currentPlaying.image}}> 
@@ -124,7 +124,7 @@
 
 <!-- CONTENT -->
 <!-- Playlist View: If you are the host -->
-<ion-content class="has-header has-footer has-subheader" ng-show="isHost()">  
+<ion-content class="has-header has-footer has-subheader" ng-show="hostStatus">  
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <div class="row card" ng-show="playlist.length === 0">
     <center class="center-it-auto">
@@ -139,7 +139,7 @@
           {{ song.title }} by {{song.artist}}
           </div>
         </div>
-        <div ng-show="isHost()">
+        <div ng-show="hostStatus">
           <a remove-from-playlist="song" data-index="{{$index}}" ng-class="currentPlaying.id === song.id ? 'button button-clear button-royal button-block' : 'button button-clear button-stable button-block'">
             <i class="ion-close-round"></i>
           </a>
@@ -151,7 +151,7 @@
 
 
 <!-- Playlist View: If you are a guest -->
-<ion-content class="has-header has-footer has-subheader" ng-show="!isHost()">  
+<ion-content class="has-header has-footer has-subheader" ng-show="!hostStatus">  
 <!-- include the fb share button here -->
   <div style="height:70%; margin-right:auto; margin-left:auto; width:80%">
     <span ng-bind-html="fbShare" ng-click='fbShareSend()' class="fbShareButton"></span>
@@ -178,7 +178,7 @@
 <div class="bar bar-footer row row-center bar-stable">
 
   <!-- Player Control Buttons: Only for host -->
-  <!-- <div class="col-20" style="margin-left: auto; margin-right: auto; float:left; min-width:160px" ng-show="isHost()">
+  <!-- <div class="col-20" style="margin-left: auto; margin-right: auto; float:left; min-width:160px" ng-show="hostStatus">
     <button play-music class="ion-play button button-outline button-royal circle bottomButton"></button>
     <button pause-music class="ion-pause button button-outline button-royal bottomButton"></button>
     <button prev-track class="ion-skip-backward button button-outline button-royal bottomButton"></button>
@@ -186,7 +186,7 @@
   </div> -->
 
   <!-- Now Playing: Seen by host and guest -->
-  <!-- <div ng-class="isHost() ? 'nowplayingHost center' : 'nowplaying center'">
+  <!-- <div ng-class="hostStatus ? 'nowplayingHost center' : 'nowplaying center'">
     <span ng-show='currentPlaying.title' class='marquee center small'>
       <p>
         <img height="28" width="28" style="float: left; margin-right:5px" class="rounded" src={{currentPlaying.image}}> 
